<resources>
    <string name="app_name">智汀云盘</string>
    <string name="main_home">文件</string>
    <string name="main_share">共享文件</string>
    <string name="main_mine">我的</string>
    <string name="main_login_fast">智汀家庭云快速登录</string>
    <string name="main_please_install_zhiting">请先安装 "智汀家庭云" APP</string>
    <string name="main_please_input_phone_number">请输入手机号</string>
    <string name="main_please_input_password">请输入密码</string>
    <string name="main_login">登录</string>
    <string name="main_please_select_home_company">请选择家庭/公司</string>
    <string name="main_no_select_home_company">暂无可选择的家庭/公司</string>
    <string name="main_please_input_correct_phone">请输入正确的手机号码</string>
    <string name="main_account_or_pwd_invalid">当前账号或密码错误，请重新输入账号或密码</string>
    <string name="main_area_not_support">该区域暂不支持</string>
    <string name="main_cannot_pass_account">拥有者已设置不能通过账号密码登录</string>
    <string name="main_setting_step">如需继续，请按以下方式设置：</string>
    <string name="main_setting_step_1">请联系对应家庭/公司的拥有者，按以下路径设置“允许获取智汀云盘凭证”</string>
    <string name="main_setting_step_1_note">路径：专业版-智慧中心-设备详情-高级设置-用户凭证-允许获取</string>
    <string name="main_setting_step_2">返回登录页面，通过“智汀家庭云”APP授权登录</string>
    <string name="main_know">知道了</string>
    <string name="home_file">文件</string>
    <string name="home_share">共享</string>
    <string name="home_download">下载</string>
    <string name="home_move">移动到</string>
    <string name="home_copy">复制到</string>
    <string name="home_review">查看</string>
    <string name="home_rename">重命名</string>
    <string name="home_remove">删除</string>
    <string name="home_create_file">新建文件夹</string>
    <string name="home_cancel">取消</string>
    <string name="home_complete">完成</string>
    <string name="home_input_file_name">输入文件夹名称</string>
    <string name="home_file_detail">文件详情</string>
    <string name="home_create_success">创建成功</string>
    <string name="home_upload_success">上传成功</string>
    <string name="home_upload_file">上传文件</string>
    <string name="home_video">视频</string>
    <string name="home_picture">图片</string>
    <string name="home_other_file">其他文件</string>
    <string name="home_folder">文件夹</string>
    <string name="home_rename_success">重命名成功</string>
    <string name="home_modify_file_type_tips">更改文件类型可能会导致文件不可用，是否继续？</string>
    <string name="home_share_to">共享给</string>
    <string name="home_all_select">全选</string>
    <string name="home_share_folder_all">共享文件(共%s个)</string>
    <string name="home_share_success">共享成功</string>
    <string name="home_remove_file_title">共%s个文件/文件夹，确定删除吗？</string>
    <string name="home_remove_file_tips">文件删除后不可恢复</string>
    <string name="home_remove_success">删除成功</string>
    <string name="home_move_to">移动到</string>
    <string name="home_copy_to">复制到</string>
    <string name="home_root_category">根目录</string>
    <string name="home_my_file">我的文件</string>
    <string name="home_share_file">共享文件</string>
    <string name="home_share_folder">共享文件</string>
    <string name="home_move_to_here">移动到此处</string>
    <string name="home_copy_to_here">复制到此处</string>
    <string name="home_create_new_file_success">新建文件夹成功</string>
    <string name="home_move_success">移动成功</string>
    <string name="home_copy_success">复制成功</string>
    <string name="home_other_app_open">其他应用打开</string>
    <string name="home_please_select_software_to_open">请选择对应的软件打开该文件</string>
    <string name="home_please_input_name">请输入名称</string>
    <string name="home_upload_list">上传列表</string>
    <string name="home_download_list">下载列表</string>
    <string name="home_backup_list">备份列表</string>
    <string name="home_uploading">正在上传（%s）</string>
    <string name="home_download_count">正在下载（%s）</string>
    <string name="home_uploaded">上传完成（%s）</string>
    <string name="home_downloaded_count">下载完成（%s）</string>
    <string name="home_transfer_lis">传输列表</string>
    <string name="home_download_fail_list">下载失败列表</string>
    <string name="home_download_fail">下载失败</string>
    <string name="home_ignore">忽略</string>
    <string name="home_save_success">保存成功</string>
    <string name="home_wait_upload">等待上传</string>
    <string name="home_wait_download">等待下载</string>
    <string name="home_wait_upload_error">上传失败</string>
    <string name="home_share_to_me">共享给我</string>
    <string name="home_backup_fail">备份失败（%s）</string>
    <string name="home_backup_on">正在进行（%s）</string>
    <string name="home_backup_record">备份记录（%s）</string>
    <string name="home_all_retry">全部重试</string>
    <string name="home_all_pause">全部暂停</string>
    <string name="home_clear">清空</string>
    <string name="home_remove_backup_tip">提示</string>
    <string name="home_remove_backup_content">仅删除记录，不会删除已备份到云盘的文件</string>
    <string name="mine_storage_manager">存储管理</string>
    <string name="mine_file_manager">文件夹管理</string>
    <string name="mine_download_setting">下载设置</string>
    <string name="mine_clear_cache">清除缓存</string>
    <string name="mine_backup_manager">备份管理</string>
    <string name="mine_logout">退出登录</string>
    <string name="mine_find_usable_disk">发现%s个可用硬盘，请添加到存储池</string>
    <string name="mine_storage_pool_list">存储池列表</string>
    <string name="mine_add_storage_pool">添加到存储池</string>
    <string name="mine_storage_unit">GB</string>
    <string name="mine_save">保存</string>
    <string name="mine_add_new_storage_pool">添加到新的存储池</string>
    <string name="mine_modify_name">修改名称</string>
    <string name="mine_please_input_new_storage_pool_name">请输入新的存储池名称</string>
    <string name="mine_storage_pool_name_digits">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+_.-</string>
    <string name="mine_storage_pool_save_ask">添加后，硬盘将会被格式化，里面的分区和文件都会删除，请确定是否添加？</string>
    <string name="mine_storage_pool_save_alert">操作不可撤销，请谨慎操作！</string>
    <string name="mine_hard_disk_count">物理硬盘：%s个</string>
    <string name="mine_separable_capacity">可分容量</string>
    <string name="mine_all_capacity">总容量</string>
    <string name="mine_storage_pool_partition">存储池分区</string>
    <string name="mine_storage_pool">存储池</string>
    <string name="mine_del">删除</string>
    <string name="mine_remove_confirm">删除确认</string>
    <string name="mine_remove_content">确定删除该存储池吗？删除后，该存储池下的所有分区及其文件夹/文件都全部删除。</string>
    <string name="mine_remove_partition_content">确定删除该分区吗？删除后，该分区下的所有文件夹/文件都全部删除。</string>
    <string name="mine_remove_tips">操作不可撤销，请谨慎操作！</string>
    <string name="mine_sure_remove">确定删除</string>
    <string name="mine_add_partition">添加分区</string>
    <string name="mine_edit_partition">编辑分区</string>
    <string name="mine_name">名称</string>
    <string name="mine_type">类型</string>
    <string name="mine_capacity">容量</string>
    <string name="mine_please_input">请输入</string>
    <string name="mine_kb">KB</string>
    <string name="mine_mb">MB</string>
    <string name="mine_gb">GB</string>
    <string name="mine_tb">TB</string>
    <string name="mine_please_input_pwd">请输入密码</string>
    <string name="mine_hard_disk_count_with_brackets">物理硬盘（%s个）</string>
    <string name="mine_used_all_capacity">%1$s/%2$s</string>
    <string name="mine_add_success">添加成功</string>
    <string name="mine_please_choose_storage_pool">请选择存储池</string>
    <string name="mine_add_to">添加到%s</string>
    <string name="mine_modify_success">修改成功</string>
    <string name="mine_remove_success">删除成功</string>
    <string name="mine_add_new">新增</string>
    <string name="mine_del_fail">删除文件夹(%s)失败</string>
    <string name="mine_update_fail">修改文件夹(%s)失败</string>
    <string name="mine_retry">重试</string>
    <string name="mine_confirm">确定</string>
    <string name="mine_modify_pwd">更改密码</string>
    <string name="mine_setting">设置</string>
    <string name="mine_add_new_folder">新增文件夹</string>
    <string name="mine_storage_partition">存储分区</string>
    <string name="mine_please_choose">请选择</string>
    <string name="mine_private_folder">私人文件夹</string>
    <string name="mine_share_folder">共享文件夹</string>
    <string name="mine_accessible_member_count">可访问成员（%s）</string>
    <string name="mine_accessible_member">可访问成员</string>
    <string name="mine_add_member">添加成员</string>
    <string name="mine_remove">删除</string>
    <string name="mine_please_choose_partition">请选择分区</string>
    <string name="mine_permission_tips">注：</string>
    <string name="mine_accessible_read">可读</string>
    <string name="mine_accessible_write">可写</string>
    <string name="mine_accessible_del">可删</string>
    <string name="mine_add_member_tips">请在下方列表选择成员\n
选择成员后可设置成员权限</string>
    <string name="mine_selected_member_list">已选择成员(%s)</string>
    <string name="mine_all_member_list">全部成员列表</string>
    <string name="mine_whether_encrypt">是否加密</string>
    <string name="mine_yes">是</string>
    <string name="mine_no">否</string>
    <string name="mine_pwd">密码</string>
    <string name="mine_pwd_tips">请输入，不能少于6位</string>
    <string name="mine_confirm_pwd">确认密码</string>
    <string name="mine_confirm_pwd_tips">请再次输入，不能少于6位</string>
    <string name="mine_partition_transfer">存储分区转移</string>
    <string name="mine_partition_change">%1$s从“%2$s”改为“%3$s”</string>
    <string name="mine_partition_change_backup">%1$s正在从“%2$s”改为““%3$s”,已为您后台运行。</string>
    <string name="mine_partition_change_backup_refresh">%1$s正在从“%2$s”改为““%3$s”,已为您后台运行，可返回列表刷新查看。</string>
    <string name="mine_partition_change_time">修改预计需要一些时间处理，且中途不可取消。确定要修改吗？</string>
    <string name="mine_partition_insufficient_capacity">分区容量不足！</string>
    <string name="mine_old_pwd">旧密码</string>
    <string name="mine_new_pwd">新密码</string>
    <string name="mine_confirm_new_pwd">确认新密码</string>
    <string name="mine_please_input_old_pwd">请输入旧密码</string>
    <string name="mine_please_input_new_pwd">请输入新密码</string>
    <string name="mine_please_input_confirm_new_pwd">请输入确认新密码</string>
    <string name="mine_pwd_length">密码不能少于6位</string>
    <string name="mine_new_is_inconsistent_with_confirm">两次新密码输入不一致</string>
    <string name="mine_folder_setting_illustration">有新成员加入时，系统会自动建该成员的私人文件夹，并放在系统存储分区-系统分区</string>
    <string name="mine_auto_del">自动删除</string>
    <string name="mine_auto_del_illustration">成员退出或被移除，他的私人文件夹及其文件是否自动删除</string>
    <string name="mine_update_pwd_success">修改成功</string>
    <string name="mine_no_storage_pool_partition">当前存储池无分区，请添加分区后重新选择\n或选择其他存储池的分区</string>
    <string name="mine_only_one">私人文件夹，成员列表只能有一位成员</string>
    <string name="mine_please_choose_member">请选择成员</string>
    <string name="mine_edit_folder">编辑文件夹</string>
    <string name="mine_please_input_folder_name">请输入文件夹名称</string>
    <string name="mine_please_choose_save_partition">请选择存储分区</string>
    <string name="mine_please_choose_type">请选择类型</string>
    <string name="mine_please_input_confirm_pwd">请输入确认密码</string>
    <string name="mine_at_least_choose_one_member">至少要选择以为成员</string>
    <string name="mine_remove_folder_content">确定删除该文件夹吗？删除后，该文件夹及其包含的所有文件夹/文件都全部删除。</string>
    <string name="mine_update_folder_fail_title">存储分区修改失败</string>
    <string name="mine_update_folder_fail_reason">分区容量不足！</string>
    <string name="mine_people_count">等%s人</string>
    <string name="mine_cancel_add">取消添加</string>
    <string name="mine_cancel_update">取消修改</string>
    <string name="mine_del_storage_pool_fail">删除存储池(%s)失败</string>
    <string name="mine_partition_add_fail">添加分区失败</string>
    <string name="mine_partition_update_fail">修改分区失败</string>
    <string name="mine_partition_del_fail">删除分区失败</string>
    <string name="mine_four_multiply">4 * </string>
    <string name="mine_equal">=</string>
    <string name="mine_mb_tips">* 分区容量只能设置为4MB的正整数倍数</string>
    <string name="mine_deleting_partition">正在删除分区，已为您后台运行，可返回列表刷新查看。</string>
    <string name="mine_saving_partition">正在保存分区信息，需要一些时间处理，已为您后台运行，可返回列表刷新查看。</string>
    <string name="warm_tips">温馨提示</string>
    <string name="warm_tips_content">欢迎使用“智汀云盘”！\n我们非常重视您的个人信息和隐私保护。在您使用“智汀云盘”服务之前，请仔细阅读、充分理解并同意智汀云盘的《用户协议》和《隐私协议》</string>
    <string name="disagree">不同意</string>
    <string name="agree">同意</string>
</resources>