<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_white_c10">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_22"
        android:layout_gravity="center"
        android:text="@string/warm_tips"
        android:textSize="@dimen/textSize16"
        android:textColor="@color/color_3f4663"
        android:textStyle="bold"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/dp_22">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_24"
                android:paddingRight="@dimen/dp_24"
                android:lineSpacingExtra="@dimen/dp_2"
                android:text="@string/warm_tips_content"
                android:textColor="@color/color_3f4663"
                android:textSize="@dimen/textSize14"
                android:textColorHighlight="@color/white"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_14"
        android:background="@color/eeeeee" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvDisagree"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/dp_17"
            android:paddingBottom="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/disagree"
            android:textColor="@color/color_94A5BE"
            android:textSize="@dimen/textSize14"
            android:textStyle="bold"/>
        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/eeeeee" />
        <TextView
            android:id="@+id/tvAgree"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/dp_17"
            android:paddingBottom="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/agree"
            android:textColor="@color/color_3f4663"
            android:textSize="@dimen/textSize14"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>