<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_white_top_c10"
    android:paddingTop="@dimen/dp_10"
    android:paddingBottom="@dimen/dp_83">

    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/mine_add_new_storage_pool"
        style="@style/dialog_title"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_10"
        android:paddingTop="@dimen/dp_9"
        android:text="@string/home_cancel"
        android:textSize="@dimen/textSize16"
        android:textColor="@color/color_1A2734" />

    <TextView
        android:id="@+id/tvComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        android:paddingRight="@dimen/dp_16"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_9"
        android:text="@string/home_complete"
        android:textSize="@dimen/textSize16"
        android:textColor="@color/color_427AED" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/dp_97"
        android:layout_height="@dimen/dp_104"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dp_50"
        android:src="@drawable/icon_storage_pool_middle" />

    <LinearLayout
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        android:background="@drawable/shape_eeeff2_c10">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_10"
            android:src="@drawable/icon_clear"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:digits="@string/mine_storage_pool_name_digits"
            android:gravity="center"
            android:hint="@string/mine_please_input_new_storage_pool_name"
            android:maxLength="50"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_18"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_19"
            android:textColor="@color/color_1A2734"
            android:textColorHint="@color/color_A2A7AE"
            android:textSize="@dimen/textSize14"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivClear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_15"
            android:src="@drawable/icon_clear"
            android:visibility="invisible"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>