<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_c10">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_22"
        android:src="@drawable/icon_alert"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_11"
        android:layout_marginLeft="@dimen/dp_22"
        android:layout_marginRight="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/main_cannot_pass_account"
        android:textColor="@color/color_3f4663"
        android:textSize="@dimen/dp_16"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_29"
        android:layout_marginLeft="@dimen/dp_22"
        android:layout_marginRight="@dimen/dp_20"
        android:gravity="left"
        android:text="@string/main_setting_step"
        android:textColor="@color/color_3f4663"
        android:textSize="@dimen/textSize14"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginLeft="@dimen/dp_22"
        android:layout_marginRight="@dimen/dp_20">
        <ImageView
            android:id="@+id/ivOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/icon_one" />
        <TextView
            android:id="@+id/tvOne"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/ivOne"
            app:layout_constraintRight_toRightOf="parent"
            android:lineSpacingExtra="@dimen/dp_2"
            android:layout_marginLeft="@dimen/dp_7"
            android:gravity="left"
            android:text="@string/main_setting_step_1"
            android:textColor="@color/color_3f4663"
            android:textSize="@dimen/textSize14" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/tvOne"
            app:layout_constraintRight_toRightOf="@+id/tvOne"
            app:layout_constraintTop_toBottomOf="@+id/tvOne"
            android:layout_marginTop="@dimen/dp_14"
            android:lineSpacingExtra="@dimen/dp_2"
            android:gravity="left"
            android:text="@string/main_setting_step_1_note"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/textSize14" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_19"
        android:layout_marginLeft="@dimen/dp_22"
        android:layout_marginRight="@dimen/dp_20">
        <ImageView
            android:id="@+id/ivTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/icon_two" />
        <TextView
            android:id="@+id/tvTwo"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/ivTwo"
            android:layout_marginLeft="@dimen/dp_7"
            android:lineSpacingExtra="@dimen/dp_2"
            android:gravity="left"
            android:text="@string/main_setting_step_2"
            android:textColor="@color/color_3f4663"
            android:textSize="@dimen/textSize14" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvKnow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_30"
        android:paddingRight="@dimen/dp_30"
        android:paddingTop="@dimen/dp_14"
        android:paddingBottom="@dimen/dp_14"
        android:background="@drawable/shape_427aed_c5"
        android:text="@string/main_know"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize14"
        android:textStyle="bold" />
</LinearLayout>